--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ argcomplete==1.11.1
 attrs==19.3.0
 Babel==2.8.0
 bcrypt==3.1.7
+boto3==1.11.9
+botocore==1.14.9
 cached-property==1.5.1
 cattrs==0.9.0
 certifi==2019.11.28
@@ -18,7 +20,7 @@ croniter==0.3.31
 cryptography==2.8
 defusedxml==0.6.0
 dill==0.3.1.1
-docutils==0.16
+docutils==0.15.2
 Flask==1.1.1
 Flask-Admin==1.5.4
 Flask-AppBuilder==2.2.2
@@ -40,6 +42,7 @@ importlib-metadata==1.5.0
 iso8601==0.1.12
 itsdangerous==1.1.0
 Jinja2==2.10.3
+jmespath==0.9.4
 json-merge-patch==0.2
 jsonschema==3.2.0
 lazy-object-proxy==1.4.3
@@ -68,6 +71,7 @@ pytz==2019.3
 pytzdata==2019.3
 PyYAML==5.3
 requests==2.22.0
+s3transfer==0.3.2
 setproctitle==1.1.10
 six==1.14.0
 SQLAlchemy==1.3.13
