'upgrading_athena_test'

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ colorlog==4.0.2
 configparser==3.5.3
 croniter==0.3.31
 cryptography==2.8
+DateTime==4.3
 defusedxml==0.6.0
 dill==0.3.1.1
 docutils==0.15.2
@@ -92,3 +93,4 @@ wincertstore==0.2
 WTForms==2.2.1
 zipp==2.1.0
 zope.deprecation==4.4.0
+zope.interface==4.7.1
